--- a/report/assignment.tex
+++ b/report/assignment.tex
@@ -236,7 +236,7 @@ The computational burden of Deep Q learning can be cost prohibitive on a small b
 Put more design challenges here.
 
 \section{Summary}
-A summary goes here.
+We conclude that using manual feature extraction certainly leads to faster training time, but it is not necessarily better than using a more general learning algorithm such as Double DQN. This is because manual feature extraction requires domain knowledge and it relies on humans who often make mistakes or overlook features that may be important.
 
 
 \begin{thebibliography}{1}
